Changes done to the reservation page
psychologue reservation p tag changed to label and input to pass info to modal that is coming up.

--- a/public/views/psychologue/ListeReservations.hbs
+++ b/public/views/psychologue/ListeReservations.hbs
@@ -1,3 +1,9 @@
+<head>
+
+<script type="text/javascript" src="../../../script/psychologue/modificationRendezVous.js"></script>
+
+</head>
+
 <div class="row">
   <div class="col-sm-14 sol-md-11 col-lg-8 mx-auto">
     <div class="card mt-5">
@@ -18,33 +24,65 @@
         <hr class="mt-4">
         {{#if resultats}}
           {{#each resultats as | resultat |}}
-            <div class="row ml-4">
-              <div class="col-4">
-                <p>ID Rendez-Vous: {{dataValues.id_RV}}<p>
+            <div class="row m-2">
+              <div class="col ml-auto">
+                <label for="id_rdv">ID: </label>
               </div>
-              <div class="col-7 ml-2">
-                <p>Client: {{#with (lookup ../client @index)}}{{prenom}} {{nom}}{{/with}}</p>
+              <div class="col ml-auto">
+                <input name="id_rdv" class="form-control" value="{{dataValues.id_RV}}" disabled>
               </div>
-            </div>
-            <div class="row ml-4 mt">
-              <div class="col-4">
-                <p>Date: {{dataValues.date}}</p>
+              <div class="col ml-auto">
+                <label for="client">Client: </label>
               </div>
-              <div class="col-7 ml-2">
-                <p>Heure: {{#with (lookup ../resultathoraire @index)}}{{dataValues.heure_debut}} à {{dataValues.heure_fin}}{{/with}}</p>
+              <div class="col ml-auto">
+                <input name="client" class="form-control" value="{{#with (lookup ../client @index)}}{{prenom}} {{nom}}{{/with}}" disabled>
               </div>
             </div>
-            <div class="row ml-4 mt">
-              <div class="col-4">
-                <p>Note: {{dataValues.note}}</p>
+            <div class="row m-2">
+              <div class="col ml-auto">
+                <label for="date float-start">Date: </label>
               </div>
-              <div class="col-7 ml-2">
-                <p>Paiement reçu: {{#if dataValues.payer}}Oui{{else}}Non{{/if}}</p>
+              <div class="col ml-auto">
+                <input name="date" class="form-control" value="{{dataValues.date}}" disabled>
+              </div>
+              <div class="col ml-auto">
+                <label for="paiement">Paiement reçu:</label>
+              </div>
+              <div class="col ml-auto">
+                <input name="paiement" class="form-control" value="{{#if dataValues.payer}}Oui{{else}}Non{{/if}}" disabled>
               </div>
             </div>
-            <div class="row ml-4 mt">
+            <div class="row m-2">
+              {{#with (lookup ../resultathoraire @index)}}
+              <div class="col ml-auto">
+                <label for="heureDebut">Heure de début: </label>
+              </div>
+              <div class="col ml-auto">
+                <input name="heureDebut" class="form-control" value="{{dataValues.heure_debut}}" disabled>
+              </div>
+              <div class="col ml-auto">
+                <label for="heureFin">Heure de fin: </label>
+              </div>
+              <div class="col ml-auto">
+                <input name="heureFin" class="form-control" value="{{dataValues.heure_fin}}" disabled>
+              </div>
+            </div>
+            <div class="row" hidden>
+              <input name="id_plagehoraire" class="form-control" value="{{dataValues.id_plage_horaire}}" disabled>
+            </div>
+              {{/with}}
+            <div class="row m-2">
+              <div class="col-3">
+                <label for="note">Notes: <label>
+              </div>
+              <div class="col-9">
+                <input name="note" class="form-control" value="{{dataValues.note}}" disabled>
+              </div>
+            </div>
+
+            <div class="row m-2">
               <div class="col text-center">
-                <a type="button" class="btn btn-success center-block mt-2" href='/psychologue/reservations/listeReservations/{{dataValues.id_RV}}'>Annuler</a>
+                <button type="button" class="btn btn-success center-block mt-2" data-bs-toggle="modifieDispo" data-bs-target="#modifieDispo">Modifier</button>
               </div>
             </div>
             <hr class="mt-4">
@@ -52,8 +90,77 @@
         {{else}}
           <p>Aucune Réservation</p>
         {{/if}}
-
       </div>
     </div>
   </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="modifieDispo" tabindex="-1">
+  <form class="needs-validation" novalidate action="/psychologue/reservations/listeReservations/modifier" method="post">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <h5 class="modal-title">Modification d'une disponibilité</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+
+        <div class="modal-body">
+
+          <div class="row">
+            <div class="col">
+              <label for="date_rv">Date du rendezvous: </label>
+              <input type="date" class="form-control" id=name="date_rv" name="date_rv" placeholder="aaaa-mm-jj" required>
+            </div>
+          </div>
+
+          <div class="row mt-2">
+            <div class="col">
+                <label for="hrDebut">Heure de Début:</label>
+                <select class="form-select" id='hrDebut' name='hrDebut' aria-label="Default select example" required>
+                  <option value="" selected disabled>Selectionnez l'heure de début</option>
+                  {{#if HeureDebuts}}
+                    {{#each HeureDebuts as | HeureDebut |}}
+                    <option value="{{HeureDebut}}">{{HeureDebut}}</option>
+                    {{/each}}
+                  {{/if}}
+                </select>
+            </div>
+            <div class="col">
+                <label for="hrFin">Heure de Fin:</label>
+                <select class="form-select" id='hrFin' name='hrFin' aria-label="Default select example" required>
+                  <option value="" selected disabled>Selectionnez l'heure de fin</option>
+                  {{#if HeureFins}}
+                    {{#each HeureFins as | HeureFin |}}
+                    <option value="{{HeureFin}}">{{HeureFin}}</option>
+                    {{/each}}
+                  {{/if}}
+                </select>
+            </div>
+          </div>
+          {{#if message}}<p style="color:red;">{{message}}</p>{{/if}}
+
+          <div class="form-group mt-2">
+            <label for="id_enfant">Nom du Client: </label>
+            <select class="form-select" name='id_client' aria-label="Default select example">
+              <option selected>Selectionnez le Client (Facultatif)</option>
+              {{#if Clients}}
+                {{#each Clients as | Client |}}
+                <option value="{{Client.dataValues.id_client}}">{{Client.dataValues.id_client}}: {{Client.dataValues.prenom}} {{Client.dataValues.nom}}</option>
+                {{/each}}
+              {{/if}}
+            </select>
+          </div>
+
+        </div>
+
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-success">Sauvegarder</button>
+        </div>
+
+      </div>
+    </div>
+  </form>
 </div>
