--- a/public/views/psychologue/calendar.hbs
+++ b/public/views/psychologue/calendar.hbs
@@ -2,7 +2,7 @@
 
   <link rel="stylesheet" href="../../../css/calendrierPsycho.css">
   <script type="text/javascript" src="../../../script/psychologue/calendrierPsycho.js"></script>
-  <script type="text/javascript" src="../../../script/psychologue/popup.js"></script>
+  <script type="text/javascript" src="../../../script/psychologue/modificationRendezVous.js"></script>
 
 </head>
 
@@ -34,9 +34,8 @@
   </div>
 </div>
 
-
 <!-- Modal -->
-<div class="modal" id="nouvelleDispo" tabindex="-1">
+<div class="modal fade" id="nouvelleDispo" tabindex="-1">
   <form class="needs-validation" novalidate action="/psychologue/reservations/nouvelleDispo" method="post">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
