Several changes to Reservation modification and annulation
Ajout de bouton d'annulation à tous les rendezvous futures. (profil client et liste de réservations)
Devra corriger la route d'annulation pour liste de réservations

Fixed a few buttons by adding columns division to html

Ajout de bouton "Modifier" à toutes les réservations avec Modals pour les modifiers.
Devra trouver un moyen de transférer du data au modals.

Création de fonctions pour générer un Array pour les heures de début et les heures de fin dans un fichier différents pour raccourcir le code.

--- a/public/views/psychologue/ListeReservations.hbs
+++ b/public/views/psychologue/ListeReservations.hbs
@@ -82,7 +82,11 @@
 
             <div class="row m-2">
               <div class="col text-center">
-                <button type="button" class="btn btn-success center-block mt-2" data-bs-toggle="modifieDispo" data-bs-target="#modifieDispo">Modifier</button>
+                <button type="button" class="btn btn-success center-block mt-2" data-bs-toggle="modal" data-bs-target="#modifieDispo">Modifier</button>
+                {{#with ../Future}}
+                    <a class="btn btn-success mt-2" href='/clients/profil/{{#with (lookup ../client @index)}}{{id_client}}{{/with}}/reservation/annulation/{{dataValues.id_RV}}'>Annuler</a>
+                  {{else}}
+                {{/with}}
               </div>
             </div>
             <hr class="mt-4">
