--- a/public/views/client/calendar.hbs
+++ b/public/views/client/calendar.hbs
@@ -39,7 +39,9 @@
             </div>
           </div>
           <div class="row mr-2 justify-content-center">
+            <div class="col text-center">
               <a class="btn btn-success" href="/calendrier/confirmation/{{dataValues.id_RV}}">Réserver</a>
+            </div>
           </div>
 
           <hr class="mt-4">
