--- a/public/views/client/confirmationRDV.hbs
+++ b/public/views/client/confirmationRDV.hbs
@@ -39,8 +39,14 @@
             </div>
           </div>
           <div class="row mr-4 justify-content-center">
-            <button type="submit" class="btn btn-success">Confirmer</button>
-            <a class="btn btn-success ml-2" href='{{retourURL}}'>Retour</a>
+            <div class="col text-center">
+              <button type="submit" class="btn btn-success">Confirmer</button>
+            </div>
+          </div>
+          <div class="row mt-2 justify-content-center">
+            <div class="col text-center">
+              <a class="btn btn-success ml-2" href='{{retourURL}}'>Retour</a>
+            </div>
           </div>
 
       </form>
