Added functions to Reservations modifications
Added 1 post route to initiate the modification process

Added 2 confirmation routes (one with client, one without)

added form validation script to future reservations and all reservations page. 

modified the confirmation page to be re-used

Will need to change the create Reservation to modify reservations in the modification Post route

--- a/public/views/psychologue/dispoCreated.hbs
+++ b/public/views/psychologue/dispoCreated.hbs
@@ -7,7 +7,7 @@
 
         <div class="row mt-2">
           <div class="col text-center">
-            <a type="button" class="btn btn-success center-block mt-2" href="/psychologue/reservations/">Retour à la page du Calendrier</a>
+            <a type="button" class="btn btn-success center-block mt-2" href="{{{LienRetour}}}">Retour à la page {{{MessageButton}}}</a>
           </div>
         </div>
 
