--- a/public/views/psychologue/ListeReservations.hbs
+++ b/public/views/psychologue/ListeReservations.hbs
@@ -168,3 +168,33 @@
     </div>
   </form>
 </div>
+
+{{#if scriptModal}}
+  <script>
+      $(document).ready(function(){
+          $("#modifieDispo").modal('show');
+      });
+  </script>
+{{/if}}
+
+<script>
+(function () {
+  'use strict'
+
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  var forms = document.querySelectorAll('.needs-validation')
+
+  // Loop over them and prevent submission
+  Array.prototype.slice.call(forms)
+    .forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+        }
+
+        form.classList.add('was-validated')
+      }, false)
+    })
+})()
+</script>
