Fixed Modify button not appearing on reservation page
changed the #with to #if

--- a/public/views/psychologue/ListeReservations.hbs
+++ b/public/views/psychologue/ListeReservations.hbs
@@ -83,10 +83,9 @@
             <div class="row m-2">
               <div class="col text-center">
                 <button type="button" class="btn btn-success center-block mt-2" data-bs-toggle="modal" data-bs-target="#modifieDispo">Modifier</button>
-                {{#with ../Future}}
+                {{#if ../Future}}
                     <a class="btn btn-success mt-2" href='/clients/profil/{{#with (lookup ../client @index)}}{{id_client}}{{/with}}/reservation/annulation/{{dataValues.id_RV}}'>Annuler</a>
-                  {{else}}
-                {{/with}}
+                {{/if}}
               </div>
             </div>
             <hr class="mt-4">
@@ -176,6 +175,7 @@
       });
   </script>
 {{/if}}
+
 
 <script>
 (function () {
