--- a/public/views/psychologue/ListeReservations.hbs
+++ b/public/views/psychologue/ListeReservations.hbs
@@ -85,7 +85,7 @@
               <div class="col text-center">
                 <button id="modifieButton" type="button" class="btn btn-success center-block mt-2" data-bs-toggle="modal" data-bs-target="#modifieDispo{{@index}}">Modifier</button>
                 {{#if ../Future}}
-                    <a class="btn btn-success mt-2" href='/clients/profil/reservation/annulation/{{dataValues.id_RV}}'>Annuler</a>
+                    <a class="btn btn-success mt-2" href='/psychologue/reservations/listeReservations/annulation/{{dataValues.id_RV}}'>Annuler</a>
                 {{/if}}
               </div>
             </div>
@@ -173,7 +173,7 @@
 
             </div>
 
-            <div class="modal-footer">
+            <div class="modal-footer justify-content-center">
               <button type="submit" class="btn btn-success">Sauvegarder</button>
             </div>
 
