--- a/public/views/psychologue/confirmationRDV.hbs
+++ b/public/views/psychologue/confirmationRDV.hbs
@@ -35,6 +35,11 @@
           </div>
           <div class="row ml-4 mt">
             <div class="col-4">
+              <p>payer: {{#if resultats.dataValues.note}}Oui{{else}}Non{{/if}}</p>
+            </div>
+          </div>
+          <div class="row ml-4 mt">
+            <div class="col-4">
               <p>Note: {{resultats.dataValues.note}}</p>
             </div>
           </div>
@@ -45,7 +50,7 @@
           </div>
           <div class="row m-2 justify-content-center">
             <div class="col text-center">
-              <a class="btn btn-success ml-2" href='{{retourURL}}'>Retour</a>
+              <a class="btn btn-success ml-2" onclick="history.back()">Retour</a>
             </div>
           </div>
 
